Implemented zoom for all display with tables, except scheduler (not needed)

--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ActivityDataView.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/ActivityDataView.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
 
 <!--
   ~ Copyright (c)  2020 Dario Lucia (https://www.dariolucia.eu)
@@ -35,9 +36,10 @@
 
 <?import eu.dariolucia.reatmetric.ui.widgets.EnhancedTitledPane?>
 <?import javafx.scene.control.CheckMenuItem?>
+<?import javafx.scene.layout.Region?>
 <EnhancedTitledPane fx:id="displayTitledPane" collapsible="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="1.0" minWidth="1.0" text="Activities" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.dariolucia.reatmetric.ui.controller.ActivityDataViewController">
     <content>
-    <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="1.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+    <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="1.0" minWidth="1.0"  xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
      <children>
         <ToolBar fx:id="toolbar" maxWidth="1.7976931348623157E308" minWidth="1.0" prefHeight="32.0">
            <items>
@@ -135,6 +137,32 @@
                    </graphic>
                    <tooltip>
                        <Tooltip text="Clear the list of the displayed activities" />
+                   </tooltip>
+               </Button>
+               <Separator orientation="VERTICAL" />
+               <Region HBox.hgrow="ALWAYS" />
+               <Button mnemonicParsing="false" onAction="#minusZoomClick">
+                   <graphic>
+                       <ImageView pickOnBounds="true" preserveRatio="true" >
+                           <image>
+                               <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/16px/magnify-minus-outline.png" />
+                           </image>
+                       </ImageView>
+                   </graphic>
+                   <tooltip>
+                       <Tooltip text="Zoom out" />
+                   </tooltip>
+               </Button>
+               <Button mnemonicParsing="false" onAction="#plusZoomClick">
+                   <graphic>
+                       <ImageView pickOnBounds="true" preserveRatio="true" >
+                           <image>
+                               <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/16px/magnify-plus-outline.png" />
+                           </image>
+                       </ImageView>
+                   </graphic>
+                   <tooltip>
+                       <Tooltip text="Zoom in" />
                    </tooltip>
                </Button>
            </items>
