--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/AlarmParameterDataView.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/AlarmParameterDataView.fxml
@@ -5,10 +5,10 @@
 <?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
 
 <!--
   ~ Copyright (c)  2020 Dario Lucia (https://www.dariolucia.eu)
@@ -35,6 +35,7 @@
 <?import eu.dariolucia.reatmetric.ui.widgets.EnhancedTitledPane?>
 
 <?import javafx.scene.control.CheckMenuItem?>
+<?import javafx.scene.layout.Region?>
 <EnhancedTitledPane fx:id="displayTitledPane" collapsible="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="1.0" minWidth="1.0" text="Alarm Parameters" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.dariolucia.reatmetric.ui.controller.AlarmParameterDataViewController">
    <content>
       <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="1.0" minWidth="1.0">
@@ -122,6 +123,32 @@
                        </graphic>
                        <tooltip>
                            <Tooltip text="Print the display" />
+                       </tooltip>
+                   </Button>
+                   <Separator orientation="VERTICAL" />
+                   <Region HBox.hgrow="ALWAYS" />
+                   <Button mnemonicParsing="false" onAction="#minusZoomClick">
+                       <graphic>
+                           <ImageView pickOnBounds="true" preserveRatio="true" >
+                               <image>
+                                   <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/16px/magnify-minus-outline.png" />
+                               </image>
+                           </ImageView>
+                       </graphic>
+                       <tooltip>
+                           <Tooltip text="Zoom out" />
+                       </tooltip>
+                   </Button>
+                   <Button mnemonicParsing="false" onAction="#plusZoomClick">
+                       <graphic>
+                           <ImageView pickOnBounds="true" preserveRatio="true" >
+                               <image>
+                                   <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/16px/magnify-plus-outline.png" />
+                               </image>
+                           </ImageView>
+                       </graphic>
+                       <tooltip>
+                           <Tooltip text="Zoom in" />
                        </tooltip>
                    </Button>
                </items>
