--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/SetParameterDialog.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/SetParameterDialog.fxml
@@ -78,7 +78,7 @@
          </panes>
       </Accordion>
       <Separator prefWidth="200.0" />
-      <HBox VBox.vgrow="NEVER" spacing="8.0">
+      <HBox VBox.vgrow="NEVER" spacing="8.0" fx:id="routeHBox">
          <children>
             <Label prefWidth="120.0" text="Selected Route" />
             <ComboBox fx:id="routeChoiceBox" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS" />
