--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/MainView.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/MainView.fxml
@@ -39,10 +39,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.control.ToggleButton?>
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0"
-      prefWidth="1700.0" stylesheets="@css/MainView.css" xmlns="http://javafx.com/javafx/11.0.1"
+      prefWidth="1700.0" xmlns="http://javafx.com/javafx/11.0.1"
       xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.dariolucia.reatmetric.ui.controller.MainViewController">
     <children>
-        <HBox alignment="CENTER_LEFT" prefHeight="64.0" prefWidth="200.0" style="-fx-background-color: #191970">
+        <HBox alignment="CENTER_LEFT" prefHeight="64.0" prefWidth="200.0" styleClass="banner">
             <children>
                 <Button fx:id="connectButton" mnemonicParsing="false" prefHeight="56.0" prefWidth="64.0"
                         onAction="#connectAction">
@@ -56,23 +56,19 @@
                 <Pane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS"/>
                 <VBox spacing="8">
                     <children>
-                        <Label fx:id="timeLbl" alignment="TOP_CENTER" textAlignment="CENTER" prefHeight="24.0" prefWidth="250" wrapText="true" text="0000-00-00 00:00:00">
+                        <Label fx:id="timeLbl" styleClass="time-label" alignment="TOP_CENTER" textAlignment="CENTER" prefHeight="24.0" prefWidth="250" wrapText="true" text="0000-00-00 00:00:00">
                             <font>
                                 <Font size="18.0"/>
                             </font>
                             <style>
-                                -fx-text-fill: white;
-                                -fx-font-weight: bold;
                                 -fx-background-color: transparent;
                             </style>
                         </Label>
-                        <Label fx:id="timeDoyLbl" alignment="TOP_CENTER" textAlignment="CENTER" prefHeight="24.0" prefWidth="250" wrapText="true" text="DOY: 000">
+                        <Label fx:id="timeDoyLbl" styleClass="time-label" alignment="TOP_CENTER" textAlignment="CENTER" prefHeight="24.0" prefWidth="250" wrapText="true" text="DOY: 000">
                             <font>
                                 <Font size="18.0"/>
                             </font>
                             <style>
-                                -fx-text-fill: white;
-                                -fx-font-weight: bold;
                                 -fx-background-color: transparent;
                             </style>
                         </Label>
@@ -83,7 +79,7 @@
                 </VBox>
                 <ImageView fx:id="bannerImage" fitHeight="64.0" fitWidth="300.0" pickOnBounds="true" preserveRatio="true" onMouseClicked="#aboutAction">
                     <image>
-                        <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/logos/logo-full-color-320px.png"/>
+                        <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/logos/logo-transparent-320px.png"/>
                     </image>
                     <cursor>
                         <Cursor fx:constant="HAND"/>
@@ -356,7 +352,6 @@
                 </ToggleButton>
                 <Label fx:id="systemLbl" onMouseClicked="#systemLabelAction" alignment="CENTER" disable="true"
                        prefHeight="24.0" prefWidth="200.0"
-                       style="-fx-border-color: black; -fx-background-color: #c6c6c6; -fx-text-fill: #1a1a1a;"
                        text="---">
                     <cursor>
                         <Cursor fx:constant="HAND"/>
