--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/RawDataFilterWidget.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/RawDataFilterWidget.fxml
@@ -25,7 +25,7 @@
   ~ limitations under the License.
   -->
 
-<VBox spacing="5.0" style="-fx-border-color: -fx-faint-focus-color;" stylesheets="@css/MainView.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.dariolucia.reatmetric.ui.controller.RawDataFilterWidgetController">
+<VBox spacing="5.0" style="-fx-border-color: -fx-faint-focus-color;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.dariolucia.reatmetric.ui.controller.RawDataFilterWidgetController">
    <children>
       <CheckBox fx:id="qualityCheckbox" mnemonicParsing="false" text="Severity" />
       <ListView fx:id="qualityList" prefHeight="80.0" VBox.vgrow="NEVER" />
