--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/SchedulerFilterWidget.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/SchedulerFilterWidget.fxml
@@ -25,7 +25,7 @@
   ~ limitations under the License.
   -->
 
-<VBox spacing="5.0" style="-fx-border-color: -fx-faint-focus-color;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.dariolucia.reatmetric.ui.controller.SchedulerFilterWidgetController">
+<VBox spacing="5.0" styleClass="reatmetric-layover" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.dariolucia.reatmetric.ui.controller.SchedulerFilterWidgetController">
    <children>
       <CheckBox fx:id="stateCheckbox" mnemonicParsing="false" text="State" />
       <ListView fx:id="stateList" prefHeight="80.0" VBox.vgrow="NEVER" />
